--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,32 @@ body {
     font-family: "Poppins", sans-serif;
     font-weight: 900;
     font-style: normal;
-    font-size: 7rem;
+    font-size: 10vw;
     letter-spacing: 0.2rem;
-    background-color: rgb(58,145,180); /* Older browser fallback */
-    background: -webkit-linear-gradient(105deg, rgba(58,145,180,1) 0%, rgba(69,252,73,1) 100%); /* Safari 5.1 - 6 */
-    background: -moz-linear-gradient(105deg, rgba(58,145,180,1) 0%, rgba(69,252,73,1) 100%); /* Firefox 3.6 - 15 */
-    background: -o-linear-gradient(105deg, rgba(58,145,180,1) 0%, rgba(69,252,73,1) 100%); /* Opera 11.1 - 12.0 */
-    background: linear-gradient(105deg, rgba(58,145,180,1) 0%, rgba(69,252,73,1) 100%); /* W3C, IE 10+, Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+div {
+    background: -webkit-linear-gradient(105deg, rgba(58,143,180,1) 0%, rgba(69,252,150,1) 100%); /* Safari 5.1 - 6 */
+    background: -moz-linear-gradient(105deg, rgba(58,145,180,1) 0%, rgba(69,252,150,1) 100%); /* Firefox 3.6 - 15 */
+    background: -o-linear-gradient(105deg, rgba(58,145,180,1) 0%, rgba(69,252,150,1) 100%); /* Opera 11.1 - 12.0 */
+    background: linear-gradient(105deg, rgba(58,145,180,1) 0%, rgba(69,252,150,1) 100%); /* W3C, IE 10+, Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+
+}
+
+/* Detect light mode */
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: rgb(190, 190, 190);
+        -webkit-text-stroke: 2px #000000;
+    }
+}
+
+/* Detect dark mode */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(65, 65, 65);
+        -webkit-text-stroke: 2px #ffffff;
+    }
 }
